--- a/UI/src/app/admin/admin.component.html
+++ b/UI/src/app/admin/admin.component.html
@@ -8,7 +8,7 @@
         <ng-container matColumnDef="severity">
           <th mat-header-cell *matHeaderCellDef> Severity </th>
           <td mat-cell *matCellDef="let element">
-            <input matInput placeholder="Class name..." value="{{element.severity}}" disabled>
+            <input matInput placeholder="Severity..." value="{{element.severity}}" disabled>
           </td>
         </ng-container>
 
@@ -21,14 +21,14 @@
         <ng-container matColumnDef="duration">
           <th mat-header-cell *matHeaderCellDef> Duration (weeks) </th>
           <td mat-cell *matCellDef="let element">
-            <input matInput placeholder="Class name..." value="{{element.duration}}" [(ngModel)]="element.duration">
+            <input matInput placeholder="Duration..." value="{{element.duration}}" [(ngModel)]="element.duration">
           </td>
         </ng-container>
 
         <ng-container matColumnDef="proportion">
           <th mat-header-cell *matHeaderCellDef> Proportion (%, 0-1) </th>
           <td mat-cell *matCellDef="let element">
-            <input matInput placeholder="Class name..." value="{{element.proportion}}" [(ngModel)]="element.proportion">
+            <input matInput placeholder="Proportion..." value="{{element.proportion}}" [(ngModel)]="element.proportion">
           </td>
         </ng-container>
 
