--- a/UI/src/app/components/navbar/navbar.component.html
+++ b/UI/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute fixed-top">
     <div class="container-fluid">
         <div class="navbar-wrapper">
-          <a class="navbar-brand" >{{getTitle()}}</a>
+            <a class="navbar-brand">{{getTitle()}}</a>
         </div>
+        <!--
         <div class="" id="navigation">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -14,7 +15,8 @@
                     </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
                         <i class="material-icons">person</i>
                         <p>
                             <span class="d-lg-none d-md-block">Some Actions</span>
@@ -26,6 +28,6 @@
                     </div>
                 </li>
             </ul>
-        </div>
+        </div> -->
     </div>
 </nav>
